force-app/main/default/objects/Billing__c/Billing__c.object-meta.xml
<CustomObject>
    <label>Billable</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Billable Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>