force-app/main/default/objects/Billing__c/fields/Care_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Care_From_Date__c</fullName>
    <label>Care From Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>