force-app/main/default/objects/Billing__c/fields/Care_Manager_Rate__c.field-meta.xml
<CustomField>
    <fullName>Care_Manager_Rate__c</fullName>
    <label>Care Manager Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>