force-app/main/default/objects/Billing__c/fields/DOT__c.field-meta.xml
<CustomField>
    <fullName>DOT__c</fullName>
    <inlineHelpText>Double overtime hours (Rate × 2.0)</inlineHelpText>
    <label>DOT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>