force-app/main/default/objects/Billing__c/fields/Emailed__c.field-meta.xml
<CustomField>
    <fullName>Emailed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emailed</label>
    <type>Checkbox</type>
</CustomField>