force-app/main/default/objects/Billing__c/fields/Event_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Event_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Billables</relationshipName>
    <type>Lookup</type>
</CustomField>