force-app/main/default/objects/Billing__c/fields/Event_Duration_Hours__c.field-meta.xml
<CustomField>
    <fullName>Event_Duration_Hours__c</fullName>
    <formula>(Event_End_Date_Time__c - Event_Start_Date_Time__c) * 24</formula>
    <label>Event Duration (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>