force-app/main/default/objects/Billing__c/fields/Event_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Start_Date_Time__c</fullName>
    <label>Event Start Date Time</label>
    <type>DateTime</type>
</CustomField>