force-app/main/default/objects/Billing__c/fields/Is_Historic_Data__c.field-meta.xml
<CustomField>
    <fullName>Is_Historic_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Historic Data</label>
    <type>Checkbox</type>
</CustomField>