force-app/main/default/objects/Billing__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Milwaukee</fullName>
            </value>
            <value>
                <fullName>Detroit</fullName>
            </value>
            <value>
                <fullName>Cincinnati</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>