force-app/main/default/objects/Billing__c/fields/OT__c.field-meta.xml
<CustomField>
    <fullName>OT__c</fullName>
    <inlineHelpText>Overtime hours (Rate × 1.5)</inlineHelpText>
    <label>OT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>