force-app/main/default/objects/Billing__c/fields/Paid_Status__c.field-meta.xml
<CustomField>
    <fullName>Paid_Status__c</fullName>
    <label>Paid Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Unpaid</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>