force-app/main/default/objects/Billing__c/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Prospect</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Billings1</relationshipName>
    <type>Lookup</type>
</CustomField>