force-app/main/default/objects/Billing__c/fields/QB_Invoice_ID__c.field-meta.xml
<CustomField>
    <fullName>QB_Invoice_ID__c</fullName>
    <externalId>true</externalId>
    <label>QB Invoice ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>