force-app/main/default/objects/Billing__c/fields/QB_Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>QB_Sync_Error__c</fullName>
    <label>QB Sync Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>