force-app/main/default/objects/Billing__c/fields/QB_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>QB_Sync_Status__c</fullName>
    <label>QB Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>