force-app/main/default/objects/Billing__c/fields/REG__c.field-meta.xml
<CustomField>
    <fullName>REG__c</fullName>
    <inlineHelpText>Regular hours (Rate × 1.0)</inlineHelpText>
    <label>REG</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>