force-app/main/default/objects/Billing__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Finalized</fullName>
            </value>
            <value>
                <fullName>Invoiced</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>