force-app/main/default/objects/Billing__c/validationRules/Location_Cannot_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Location_Cannot_Change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISCHANGED( Location_g__c)
)</errorConditionFormula>
    <errorMessage>Location cannot be changed.</errorMessage>
</ValidationRule>