force-app/main/default/objects/Billing__c/validationRules/Lock_Billable_Once_Synced_to_QB.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Billable_Once_Synced_to_QB</fullName>
    <active>false</active>
    <errorConditionFormula>PRIORVALUE(Is_Synced__c)</errorConditionFormula>
    <errorMessage>Billable cannot be edited once the record is synced to QuickBooks.</errorMessage>
</ValidationRule>