force-app/main/default/objects/Billing__c/validationRules/Validation_Care_Date_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Care_Date_Range</fullName>
    <active>false</active>
    <description>Ensures Care To Date is after Care From Date.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Care_From_Date__c)),
    NOT(ISBLANK(Care_To_Date__c)),
    Care_To_Date__c &lt; Care_From_Date__c
)</errorConditionFormula>
    <errorDisplayField>Care_From_Date__c</errorDisplayField>
    <errorMessage>Care To Date must be after Care From Date.</errorMessage>
</ValidationRule>