force-app/main/default/objects/Billing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Is_Synced__c</columns>
    <columns>QB_Sync_Status__c</columns>
    <columns>Amount__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Location_g__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QB_Sync_Status__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <label>All</label>
</ListView>