force-app/main/default/objects/Billing__c/listViews/Synced_Billing_Records.listView-meta.xml
<ListView>
    <fullName>Synced_Billing_Records</fullName>
    <columns>NAME</columns>
    <columns>Event_Start_Date_Time__c</columns>
    <columns>Event_End_Date_Time__c</columns>
    <columns>QB_Sync_Status__c</columns>
    <columns>Is_Synced__c</columns>
    <columns>Synced_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Synced__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Synced_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Synced Billing Records</label>
</ListView>