force-app/main/default/objects/Billing__c/listViews/Unsynced_Billables.listView-meta.xml
<ListView>
    <fullName>Unsynced_Billables</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Event_Start_Date_Time__c</columns>
    <columns>Event_End_Date_Time__c</columns>
    <columns>Is_Synced__c</columns>
    <columns>Location_g__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Synced__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Location_g__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Unsynced Billables</label>
</ListView>